# DicomToMesh

./: .travis.yml  CMakeLists.txt  Dockerfile  HowToPPA.txt  README.md  main.cpp  vtkDicomRoutines.cpp  vtkDicomRoutines.h  vtkMeshRoutines.cpp  vtkMeshRoutines.h
.github/workflows/: cpp.yml  cppVTK6.yml  cppVTK6Dicom.yml  cppVTK8.yml  cppVTK9.yml  cppVTK9Dicom.yml  cppVTK9DicomGUI.yml  ppa2204UbuntuLatest.yml  ppaUbuntuLatest.yml  testdm.yml
debian/: changelog  control  copyright  rules
dicom2mesh/: CMakeLists.txt  main.cpp
dicom2mesh/inc/: dicom2mesh.h
dicom2mesh/src/: dicom2mesh.cpp  main.cpp
dicom2mesh/test/: t_d2m.cpp  t_parsing.cpp  test-ppa-dicom2mesh.sh
docker/: Dockerfile
gui/: CMakeLists.txt  d2mWidget.cpp  d2mWidget.h  d2mWidget.ui  dicomConverter.cpp  dicomConverter.h  main.cpp
gui/rsc/: dicom2meshgui.qrc
lib/: CMakeLists.txt
lib/inc/: dicomFactory.h  dicomRoutines.h  dllDefines.h  meshData.h  meshRoutines.h  meshVisualizer.h  volumeVisualizer.h  vtkDicomFactory.h  vtkDicomRoutines.h  vtkMeshData.h  vtkMeshRoutines.h  vtkMeshVisualizer.h  vtkVolumeVisualizer.h
lib/inc/vtkdicom/: dicomRoutinesExtended.h  vtkDicomRoutinesExtended.h
lib/src/: dicomFactory.cpp  dicomRoutines.cpp  meshData.cpp  meshRoutines.cpp  meshVisualizer.cpp  volumeVisualizer.cpp  vtkDicomFactory.cpp  vtkDicomRoutines.cpp  vtkMeshData.cpp  vtkMeshRoutines.cpp  vtkMeshVisualizer.cpp  vtkVolumeVisualizer.cpp
lib/src/vtkdicom/: dicomRoutinesExtended.cpp  vtkDicomRoutinesExtended.cpp
lib/test/: t_dicom.cpp  t_mesh.cpp  t_volume.cpp
src/: main.cpp  vtkDicomRoutines.cpp  vtkDicomRoutines.h  vtkMeshRoutines.cpp  vtkMeshRoutines.h  vtkMeshVisualizer.cpp  vtkMeshVisualizer.h
